# auto_cell

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml  ruff.toml
config/: approval_matrix.yaml  mqtt_topics.yaml
config/recipes/: manstein_phase1.yaml  manstein_rules.yaml
docs/design/: additional_tasks_memo.md  agent_swarm_investigation_prompts.md  alignment_with_downloaded_report.md  design_reconsideration_changes.json  design_reconsideration_report.md  kg_to_auto_cell.md  regulatory_technical_controls.md  requirements.md  roadmap.md
docs/design/adr/: 0001-control-architecture.md
docs/design/closed_loop_planning/: 01_roadmap_criticism_verification.md  02_missing_assets_for_closed_loop.md  (+5 more)
docs/knowledge_graph/: INDEX.md  README.md  edges.csv  edges_v2.csv  edges_v2_1.csv  ips_automation_knowledge_map.html  ips_automation_knowledge_map_v2.html  ips_automation_knowledge_map_v2_1.html  knowledge_graph.json  knowledge_graph.jsonl  knowledge_graph.ttl  knowledge_graph_v2.json  knowledge_graph_v2.jsonl  knowledge_graph_v2.ttl  knowledge_graph_v2_1.json  knowledge_graph_v2_1.jsonl  knowledge_graph_v2_1.ttl  nodes.csv  nodes_v2.csv  nodes_v2_1.csv  sources.csv  sources_unique.csv  sources_v2.csv  sources_v2_1.csv
infra/mosquitto/: mosquitto.conf
infra/virtual_edge/: __init__.py  device_profile.py  dummy_bioreactor.py
scripts/: merge_kg_v2_1.py
sim/: __init__.py
sim/plant_model/: __init__.py  constants.py  factory.py  manstein_ode.py  solver.py  state.py
src/auto_cell/: __init__.py  _utils.py  l3_orchestrator.py
tests/: conftest.py  test_approval_flow.py  test_approval_persistence.py  test_approval_tool_flow.py  test_audit_log.py  test_auth.py  test_dashboard_api.py  test_e2e_closed_loop.py  test_e_signature.py  test_gateway_ingestion.py  test_hmi_ui.py  test_mqtt_client.py  test_mqtt_idempotency.py  test_plant_model.py  test_plant_model_basics.py  test_schemas.py  test_security_reliability.py  test_smoke.py  test_tool_executor.py  test_virtual_edge.py
tests/l1/: test_l1_action_planner.py  test_l1_cycle_executor.py  test_l1_event_dispatcher.py  test_l1_recipe_engine.py  test_l1_recipe_loader.py  test_l1_rule_engine.py  test_l1_state_machine.py
tests/l2_bayesian/: test_l1_integration.py  test_objective.py  test_optimizer.py  test_space.py
tests/l3/: test_orchestrator.py
tests/plugins/: test_aggregate_imaging.py  test_aggregate_imaging_service.py  test_cell_culture_channels.py  test_cell_culture_env.py  test_cell_culture_events.py  test_cell_culture_sanitizer.py  test_cell_culture_tools.py  test_confidence.py
(+94 files in other folders)
