[project]
name = "auto-cell"
version = "0.1.0"
description = "iPSC suspension-bioreactor automation physical-AI — the cell_culture domain built on physical-ai-core."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "physical-ai-core",
    # Tier2 plant model (literature iPSC suspension ODE)
    "scipy>=1.11",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff",
    "mypy",
]

# Same-machine sibling: editable so core edits reflect instantly (no per-PJ update).
# Switch to { git = "ssh://…/physical-ai-core", tag = "vX.Y.Z" } for CI / other machines.
[tool.uv.sources]
physical-ai-core = { path = "../physical-ai-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_cell"]
