[project]
name = "auto-cell"
version = "0.1.0"
description = "iPSC suspension-bioreactor automation physical-AI — the cell_culture domain built on physical-ai-core."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "physical-ai-core",
    # Tier2 plant model (literature iPSC suspension ODE)
    "scipy>=1.11",
    "numpy>=1.26",
    "pydantic>=2.0",
    "paho-mqtt>=2.1",
    "pyyaml>=6.0",
    "transitions>=0.9",
    # HMI / approval / audit (M05)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff",
    "mypy",
    "httpx>=0.27,<1.0",
]
bo = [
    "ax-platform>=0.4.0",
    "botorch>=0.11.0",
    "torch>=2.2",
]
llm = [
    "openai>=1.30",
    "anthropic>=0.28",
]
imaging = [
    "cellpose>=3.0",
    "opencv-python-headless>=4.8",
    "scikit-image>=0.22",
    "Pillow>=10.0",
]

# Same-machine sibling: editable so core edits reflect instantly (no per-PJ update).
# Switch to { git = "ssh://…/physical-ai-core", tag = "vX.Y.Z" } for CI / other machines.
[tool.uv.sources]
physical-ai-core = { path = "../physical-ai-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_cell", "sim", "infra"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
disable_error_code = ["prop-decorator", "misc"]

[tool.pytest.ini_options]
pythonpath = ["."]
